--- a/src/ru/chay_stakany_ru.html
+++ b/src/ru/chay_stakany_ru.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="bianchi, кофе, стаканы для кофе, стаканы для чая">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Стаканы для кофе та чаю | Стаканы для вендинга и ХоРеКи</title>
-    <link rel="icon" href="./favicon.png" type="image/x-icon">
+    <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../chay_stakany.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
