--- a/src/ru/dlya_magazinov_i_setey_ru.html
+++ b/src/ru/dlya_magazinov_i_setey_ru.html
@@ -11,7 +11,7 @@
         content="хорека, оборудование, кофе, кофемашина, кофемашина в магазин, кофемашина в аренду, профессиональное кофемашина">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Аренда кофемашин Харьков, Киев бесплатно | Вендинг | Бианчи</title>
-    <link rel="icon" href="./favicon.png" type="image/x-icon">
+    <link rel="icon" href="../favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../dlya_magazinov_i_setey.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
