--- a/src/ru/index_ru.html
+++ b/src/ru/index_ru.html
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../index.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
@@ -211,7 +211,7 @@
     <div class="fullscreen-bg">
         <div class="overlay">
         </div>
-        <video loop muted autoplay poster="./img/index/banner.webp" class="fullscreen-bg__video">
+        <video loop muted autoplay poster="../img/index/banner.webp" class="fullscreen-bg__video">
             <source src="../video/video.ogv" type="video/ogg">
             <source src="../video/video.mp4" type="video/mp4">
             <source src="../video/video.webm" type="video/webm">
@@ -346,7 +346,7 @@
 
     <!-- /////////////////////////////////////////   Partners    ////////////////////////////////////////     -->
     <div class="separator">
-        <h3>НАШЫ ПАРТНЁРЫ</h3>
+        <h3>НАШИ ПАРТНЁРЫ</h3>
     </div>
     <div class="container text-center partners mb-4">
         <div class="row g-0">
