--- a/src/moloko_shokolad.html
+++ b/src/moloko_shokolad.html
@@ -199,7 +199,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
                             <a class="btn btn-outline-success" href="./ru/moloko_shokolad_ru.html">RU</a>
                         </div>
