--- a/src/ru/moloko_shokolad_ru.html
+++ b/src/ru/moloko_shokolad_ru.html
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../moloko_shokolad.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
@@ -243,7 +243,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
@@ -265,7 +265,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
@@ -287,7 +287,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
@@ -310,7 +310,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
