--- a/src/ru/postovie_ru.html
+++ b/src/ru/postovie_ru.html
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../postovie.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
