--- a/src/ru/zernovoy_kofe_ru.html
+++ b/src/ru/zernovoy_kofe_ru.html
@@ -197,7 +197,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty_ru.html">КОНТАКТЫ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success" href="../zernovoy_kofe.html">UA</a>
                             <a class="btn btn-outline-success active" href="#">RU</a>
                         </div>
@@ -246,7 +246,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
@@ -267,7 +267,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
@@ -288,7 +288,7 @@
                             <ul class="lh-sm">
                                 <li><b>Вес:<br></b>1 кг.</li>
                                 <br>
-                                <li><b>Производитель:<br></b>Голландия</li>
+                                <li><b>Произво-<br>дитель:<br></b>Голландия</li>
                             </ul>
                         </figcaption>
                     </figure>
