--- a/src/vending_avtomaty.html
+++ b/src/vending_avtomaty.html
@@ -198,7 +198,7 @@
                         <a class="btn text-nowrap" role="button" href="./contacty.html">КОНТАКТИ</a>
                     </li>
                     <li class="nav-item">
-                        <div class="btn-group" role="group">
+                        <div class="btn-group lang" role="group">
                             <a class="btn btn-outline-success active" href="#">UA</a>
                             <a class="btn btn-outline-success" href="./ru/vending_avtomaty_ru.html">RU</a>
                         </div>
