Картинки рус версия

--- a/src/ru/dlya_cafe_restoranov_ru.html
+++ b/src/ru/dlya_cafe_restoranov_ru.html
@@ -216,7 +216,7 @@
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
         <div class="container">
-            <a><img src="../img/dlya_cafe_restoranov/classic_banner.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/classic_baner_ru.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
