--- a/src/ru/vending_ru.html
+++ b/src/ru/vending_ru.html
@@ -212,7 +212,7 @@
     <!-- /////////////////////////////////////////   Banner    ////////////////////////////////////////     -->
     <div class="banner">
         <div class="container">
-            <a><img src="../img/vending/banner.webp" class="img-fluid" alt="banner"></a>
+            <a><img src="./img/vending_baner_ru.webp" class="img-fluid" alt="banner"></a>
         </div>
     </div>
     <!-- /////////////////////////////////////////   Icons    ////////////////////////////////////////     -->
@@ -279,7 +279,7 @@
         </div>
     </div>
     <div class="container">
-        <a><img src="../img/vending/services.webp" class="img-fluid" alt="services"></a>
+        <a><img src="./img/vending_uslugi_ru.webp" class="img-fluid" alt="services"></a>
     </div>
     <div class="magazine container">
         <div class="row">
@@ -388,7 +388,7 @@
                 <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="3500">
-                            <img src="../img/vending/slider/slider.webp" class="d-block w-100 p-3" alt="coffemashine">
+                            <img src="./img/apparaty_vending_ru.webp" class="d-block w-100 p-3" alt="coffemashine">
                             <a href="./vending_avtomaty_ru.html" class="btn text-nowrap fw-bold">Подробнее</a>
                         </div>
                         <div class="carousel-item" data-bs-interval="3500">
